[lib]
bench = false

[package]
name = "rust-context"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A macro for using threadlocals to deeply bind contextual values"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
